syntax = "proto3";

package tasks;

service TaskService {
    rpc Create(Task) returns (Task);
    rpc Get(IdReq) returns (Task);
    rpc List(ListReq) returns (ListResp);
    rpc Update(Task) returns (Task);
    rpc Delete(IdReq) returns (EmptyResp);
    rpc ListOverdue(ListOverReq) returns (ListOverResp);
}

message EmptyResp {}

message Task {
    string id = 1;
    string assignee = 2;
    string title = 3;
    string summary = 4;
    string deadline = 5;
    string status = 6;
    string created_at = 7;
    string updated_at = 8;
    string deleted_at = 9;
}

message IdReq{
    string id = 1;
}

message ListReq {
  int64 page = 1;
  int64 limit = 2;
}

message ListResp {
  repeated Task tasks = 1;
  int64 count = 2;
}

message ListOverReq {
  string time = 1;
  int64 page = 2;
  int64 limit = 3;
}

message ListOverResp {
  repeated Task tasks = 1;
  int64 count = 2;
}